# chip8-vm-rust

./: .gitignore  Cargo.toml  README.md  tests.md
.github/workflows/: rust.yml
assets/: header-readme.psd
chip8/: Cargo.toml
chip8/src/: cpu.rs  gpu.rs  instructions.rs  lib.rs  main.rs  memory.rs
chip8/tests/: gpu_tests.rs  opcode_tests.rs
sdl/: Cargo.toml
sdl/src/: binaryreader.rs  lib.rs  main.rs
