[package]
name = "chip8_emu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "chip8",
    "sdl",
]


[[test]]
name = "opcode_tests"
path = "chip8/tests/opcode_tests.rs"

[dependencies]

sdl2 = "0.35.2"
rand = "0.8.5"
chip8 = { path = "chip8/" }
sdl = { path = "sdl/" }
